--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ twitter: "https://twitter.com/"
 github: "https://github.com/"
 
 # Site config
-url                      : "https://iiee0.github.io"
-baseurl: ""
+url    : "https://iiee0.github.io"
+baseurl: "/iiee"
 highlighter: rouge
 sass:
   sass_dir: assets/scss
